--- a/app/views/cooperate_reservation/_form.html.erb
+++ b/app/views/cooperate_reservation/_form.html.erb
@@ -37,7 +37,8 @@
     <br>
       <%= form.hidden_field(:employee_id, :value => current_user.employee_id)  %>
       <%= form.hidden_field(:arrival_date, :value => @arrival_date)  %>
-      <%= form.hidden_field(:leave_date, :value => @leave_date)  %>
+    <%= form.hidden_field(:leave_date, :value => @leave_date)  %>
+    <%= form.hidden_field(:room_id, :value => @chosen_rooms[0]["id"])  %>
 
       <%= form.fields_for :payment_attributes, Payment.new do |p| %>
         <%= p.fields_for :client_attributes, Client.new do |client| %>
