--- a/app/views/cooperate_reservation/index.html.erb
+++ b/app/views/cooperate_reservation/index.html.erb
@@ -24,7 +24,7 @@
   <% @reservations.each do |reservation| %>
     <% room = Room.find(reservation.room_id) %>
     <%  room_name = room.name %>
-    <%  price = RoomPrice.find(RoomType.find(Room.find(reservation.room_id).id).id).price %>
+    <%  price = RoomPrice.find(RoomType.find(Room.find(reservation.room_id).room_type_id).id).price %>
     <%# room_status = @room_statuses[room.status - 1][:text] %>
     <% room_status = @room_statuses[reservation.status - 1][:text] %>
 
