--- a/app/views/cooperate_reservation/_form.html.erb
+++ b/app/views/cooperate_reservation/_form.html.erb
@@ -37,9 +37,9 @@
     <br>
       <%= form.hidden_field(:employee_id, :value => current_user.employee_id)  %>
       <%= form.hidden_field(:arrival_date, :value => @arrival_date)  %>
-    <%= form.hidden_field(:leave_date, :value => @leave_date)  %>
-    <%= form.hidden_field(:room_id, :value => @chosen_rooms[0]["id"])  %>
-
+      <%= form.hidden_field(:leave_date, :value => @leave_date)  %>
+      <%= form.hidden_field(:room_id, :value => @chosen_rooms[0]["id"])  %>
+      <%= form.hidden_field(:status, :value => 1) %>
       <%= form.fields_for :payment_attributes, Payment.new do |p| %>
         <%= p.fields_for :client_attributes, Client.new do |client| %>
           <div id="step1">
@@ -50,8 +50,6 @@
           <%= render :partial => "step2",  :locals=>{:p=>p, :form=>form} %>
         </div>
     <% end %>
-
-
   </div>
   <div id="choosen_rooms">
 
@@ -84,7 +82,7 @@
             if (current_step >= 2)
             {
                 $('#finish_button').show()
-                // $("#next_button").hide()
+                $("#next_button").hide()
             }
             else
             {
